[package]
name = "co_ddl"
version = "0.0.0"
description = "A Tauri App"
authors = ["Louis<20200581@cqu.edu.cn>"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.68"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.1", features = [] }
tonic-build = "0.9"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.1", features = ["api-all"] }
tonic = "0.9"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
prost = "0.11.0"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
